--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,10 @@
 # Configuration
 baseURL: "https://getknot.dev/"
 title: "knot"
-theme: "hextra"
+
+module:
+  imports:
+    - path: github.com/imfing/hextra
 
 enableRobotsTXT: true
 enableGitInfo: false
