--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,7 @@ title = 'knot'
   githubURL = "https://github.com/paularlott/knot"
   copyright = "Paul Arlott"
   defaultTheme = "light"  # Options: "light" or "dark"
+  includeSections = ["docs", "tutorials"]
 
   [params.navigation]
     [[params.navigation.header]]
