--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ title = 'knot'
 [params]
   githubURL = "https://github.com/paularlott/knot"
   copyright = "Paul Arlott"
-  defaultTheme = "dark"  # Options: "light" or "dark"
+  defaultTheme = "light"  # Options: "light" or "dark"
   includeSections = ["docs", "tutorials"]
 
   [params.navigation]
